@@ -8,11 +8,11 @@ Description: ggtree extends the ggplot2 plotting system which implemented the
     grammar of graphics. ggtree is designed for visualizing phylogenetic tree
     and different types of associated annotation data.
 Depends:
-    R (>= 3.1.0),
-    ape,    
-    ggplot2
+    R (>= 3.1.0)
 Imports:
+    ape,
     Biostrings,
+    ggplot2,
     grid,
     gridExtra,
     jsonlite,
