@@ -13,8 +13,10 @@ S3method(fortify,phylo4)
 export("%<%")
 export("%<+%")
 export(.)
+export(aes)
 export(as.binary)
 export(geom_aline)
+export(geom_text)
 export(geom_tiplab)
 export(geom_tippoint)
 export(geom_tree)
@@ -25,6 +27,7 @@ export(get.tipseq)
 export(get.tree)
 export(get.treeinfo)
 export(get.treetext)
+export(ggplotGrob)
 export(ggtree)
 export(gplot)
 export(gzoom)
@@ -36,6 +39,8 @@ export(read.codeml_mlc)
 export(read.hyphy)
 export(read.jplace)
 export(read.paml_rst)
+export(read.tree)
+export(rtree)
 export(theme_tree)
 export(theme_tree2)
 export(write.jplace)
